.kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: siconfview-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: siconf.policiacivil.go.gov.br
spec:
  tls:
    - hosts:
        - siconf-homo.policiacivil.go.gov.br
        - siconf.policiacivil.go.gov.br
      secretName: certificado-pc
  rules:
    - host: siconf-homo.policiacivil.go.gov.br
      http:
        paths:
          - path: /
            backend:
              serviceName: siconfview-service
              servicePort: 80
